--- a/ToDoAppUsingPostgreSQLDB/src/main/resources/application.properties
+++ b/ToDoAppUsingPostgreSQLDB/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+#Connect this app to db
+spring.datasource.url=jdbc:postgresql://localhost:5432/ToDoApp
+#spring.datasource.username=marcusslee95
+#spring.datasource.password=postgresql
+spring.jpa.show-sql=true
 
+### Hibernate Properties
+## The SQL dialect makes Hibernate generate better SQL for the chosen database
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#
+## Hibernate ddl auto (create, create-drop, validate, update)
+#spring.jpa.hibernate.ddl-auto = update
