implememented update a todo endpoint (since it uses the JPA save method. if there's no matching todo - as in todo with same id - it creates a new todo)

--- a/ToDoAppUsingPostgreSQLDB/src/main/resources/application.properties
+++ b/ToDoAppUsingPostgreSQLDB/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Connect this app to db
-spring.datasource.url=jdbc:postgresql://localhost:5432/ToDoApp
+spring.datasource.url=jdbc:postgresql://localhost:5432/todoapp
 #spring.datasource.username=marcusslee95
 #spring.datasource.password=postgresql
 spring.jpa.show-sql=true
